[package]
name = "pwhash"
version = "0.3.1"
authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
description = "A collection of password hashing routines in pure Rust."
documentation = "https://inejge.github.io/pwhash"
homepage = "https://github.com/inejge/pwhash"
repository = "https://github.com/inejge/pwhash"
readme = "README.md"
license = "MIT"
keywords = ["password", "hash", "hashing", "crypt"]
categories = ["cryptography", "authentication"]

[dependencies]
md-5 = "0.9"
sha-1 = "0.9"
sha2 = "0.9"
blowfish = { version = "0.5", features = ["bcrypt"] }
hmac = "0.8"
byteorder = "1"
rand = "0.7"
