[package]
name = "pwhash"
version = "1.0.0"
authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
description = "A collection of password hashing routines in pure Rust."
documentation = "https://inejge.github.io/pwhash"
homepage = "https://github.com/inejge/pwhash"
repository = "https://github.com/inejge/pwhash"
readme = "README.md"
license = "MIT"
keywords = ["password", "hash", "hashing", "crypt"]
categories = ["cryptography", "authentication"]
edition = "2021"

[[bin]]
name = "pwhash"
required-features = ["binary"]

[features]
binary = ["clap", "clap_complete", "rpassword"]

[dependencies]
md-5 = "0.10.1"
sha-1 = "0.10.0"
sha2 = "0.10.2"
blowfish = { version = "0.9.1", features = ["bcrypt"] }
hmac = "0.12.1"
byteorder = "1.4.3"
rand = "0.8.5"
clap = { version = "4.0.10", features = ["derive"], optional = true }
rpassword = { version = "7.0.0", optional = true }
clap_complete = { version = "4.0.2", optional = true }
